# cubes

./: .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
assets/shaders/: text.frag  text.vert  world.vert
include/: camera.hpp  fps.hpp  init.hpp  log.hpp  shader.hpp  vao.hpp  vbo.hpp  window.hpp
include/gfx/: mesh.hpp  shader.hpp  texture.hpp  vao.hpp  vbo.hpp  window.hpp
include/render/: debugtextrenderer.hpp  renderer.hpp  worldrenderer.hpp
include/states/: game.hpp  state.hpp
include/text/: debugtext.hpp  textmesh.hpp  textmeshbuilder.hpp
include/util/: assert.hpp  camera.hpp  coords.hpp  fps.hpp  hash.hpp  init.hpp  log.hpp  mesh.hpp  meshbuilder.hpp  vertex.hpp  vertexcolour.hpp
include/world/: block.hpp  chunk.hpp  chunkmesh.hpp  chunkmeshbuilder.hpp  world.hpp
shaders/: chunk.frag  chunk.vert  world.vert
src/: camera.cpp  fps.cpp  init.cpp  main.cpp  shader.cpp  vao.cpp  vbo.cpp  window.cpp
src/gfx/: mesh.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp  window.cpp
src/render/: debugtextrenderer.cpp  renderer.cpp  worldrenderer.cpp  worldrewnderer.cpp
src/states/: game.cpp  state.cpp
src/text/: debugtext.cpp  textmesh.cpp  textmeshbuilder.cpp
src/util/: camera.cpp  fps.cpp  hash.cpp  init.cpp  vertex.cpp  vertexcolour.cpp
src/world/: block.cpp  chunk.cpp  chunkmesh.cpp  chunkmeshbuilder.cpp  world.cpp
test/: main.cpp
